istio/virtual-service/workload-client/route.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ns-workload-client
  name: generic-service
  labels:
    app: generic-service
    service: generic-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP     

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: ns-workload-client
  name: generic-service
spec:
  hosts:
  - "generic-service.ns-workload-client.svc.cluster.local"
  gateways:
  - mesh  
  http:
  #PATH    
  - match:
    - uri:
        prefix: /workload/01
    route:
    - destination:
        host: workload-one.ns-workload-one.svc.cluster.local
        port:
          number: 80

  - match:
    - uri:
        prefix: /workload/02
    rewrite:
      uri: /workload-two    
    route:
    - destination:
        host: workload-two.ns-workload-two.svc.cluster.local
        port:
          number: 80          
  #HEADER        
  - match:
    - headers:
        workload:
          exact: "01"
    route:
    - destination:
        host: workload-one.ns-workload-one.svc.cluster.local
        port:
          number: 80       

  - match:
    - headers:
        workload:
          exact: "02"
    route:
    - destination:
        host: workload-two.ns-workload-two.svc.cluster.local
        port:
          number: 80 
  #DEFAULT             
  - route:
    - destination:
        host: workload-one.ns-workload-one.svc.cluster.local
        port:
          number: 80
